--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "张静林"
-  avatar           : "images/android-chrome-512x512.png"
+  avatar           : "images/zhaopianzhiye.png"
   bio              : # "Lorem ipsum College"
   location         : # "Beijing, China"
   employer         :
