--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Lorem ipsum"
-description              : # ""
+title                    : "张静林"
+description              : "副教授，昌吉学院"
 repository               : "RayeRen/acad-homepage.github.io"
 google_scholar_stats_use_cdn : true
 
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "张静林"
   avatar           : "images/zhaopianzhiye.png"
-  bio              : "昌吉学院"
+  bio              : # "昌吉学院"
   location         : # "Beijing, China"
   employer         :
   pubmed           : 
